hphp/hack/test/typecheck/inout/bad_inout_decl_memoize3.php
<?hh // strict

final class D {
  <<__MemoizeLSB>>
  public static function baz(mixed $x, inout mixed $y, mixed $z): void {}
}
